[gd_scene load_steps=15 format=3 uid="uid://dmcdf23mdgi0g"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_ft6jq"]
[ext_resource type="Texture2D" uid="uid://ib85us2kuxdx" path="res://media/gfx/mpn_logo.png" id="1_gqper"]
[ext_resource type="Texture2D" uid="uid://h7plhqlebcl3" path="res://media/gfx/bg.jpg" id="1_kqog4"]
[ext_resource type="FontFile" uid="uid://dbi6l6gskqcr8" path="res://media/fonts/BlackOpsOne-Regular.ttf" id="2_8fs5r"]
[ext_resource type="Texture2D" uid="uid://80107taqency" path="res://media/gfx/no_image.png" id="5_mppla"]

[sub_resource type="Gradient" id="Gradient_ojf1j"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c1nom"]
gradient = SubResource("Gradient_ojf1j")
fill_from = Vector2(1, 0.5)
fill_to = Vector2(0, 0.5)
metadata/_snap_enabled = true

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_bjkx2"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_jmlp6"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_u8i6h"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_sg6m2"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qrl76"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_wys5u"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4po2w"]
light_mode = 1

[node name="main" type="Node2D"]
script = ExtResource("1_ft6jq")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(688, 364)
scale = Vector2(21.5, 11.375)
energy = 1.76
blend_mode = 1
texture = SubResource("GradientTexture2D_c1nom")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1296.0
offset_bottom = 736.0
color = Color(0, 0, 0, 1)

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(744, 304)
scale = Vector2(0.844444, 0.844444)
texture = ExtResource("1_kqog4")

[node name="MpnLogo" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_bjkx2")
position = Vector2(252, 84)
scale = Vector2(0.223206, 0.221636)
texture = ExtResource("1_gqper")

[node name="upload_update" type="Node2D" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_jmlp6")

[node name="upload_mod" type="Label" parent="upload_update"]
use_parent_material = true
offset_left = 24.0
offset_top = 248.0
offset_right = 383.0
offset_bottom = 311.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 50
text = "> Upload Mod"

[node name="upload_mod_button" type="TextureButton" parent="upload_update/upload_mod"]
layout_mode = 0
offset_top = 8.0
offset_right = 360.0
offset_bottom = 72.0

[node name="update_mod" type="Label" parent="upload_update"]
use_parent_material = true
offset_left = 24.0
offset_top = 312.0
offset_right = 386.0
offset_bottom = 375.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 50
text = "> Update Mod"

[node name="setup_mode" type="Node2D" parent="."]
material = SubResource("CanvasItemMaterial_u8i6h")

[node name="mod_name" type="Label" parent="setup_mode"]
use_parent_material = true
offset_left = 24.0
offset_top = 248.0
offset_right = 459.0
offset_bottom = 311.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 50
text = "> Enter name"

[node name="name_button" type="TextureButton" parent="setup_mode/mod_name"]
layout_mode = 0
offset_top = 8.0
offset_right = 360.0
offset_bottom = 56.0

[node name="mod_description" type="Label" parent="setup_mode"]
use_parent_material = true
offset_left = 24.0
offset_top = 312.0
offset_right = 552.0
offset_bottom = 375.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 50
text = "> Enter description"

[node name="description_button" type="TextureButton" parent="setup_mode/mod_description"]
layout_mode = 0
offset_top = 8.0
offset_right = 528.0
offset_bottom = 56.0

[node name="mod_directory" type="Label" parent="setup_mode"]
use_parent_material = true
offset_left = 24.0
offset_top = 376.0
offset_right = 459.0
offset_bottom = 439.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 50
text = "> Mod directory"

[node name="mod_directory_folder" type="TextureButton" parent="setup_mode/mod_directory"]
layout_mode = 0
offset_top = 8.0
offset_right = 440.0
offset_bottom = 56.0

[node name="icon_directory" type="Label" parent="setup_mode"]
use_parent_material = true
offset_left = 24.0
offset_top = 440.0
offset_right = 466.0
offset_bottom = 503.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 50
text = "> Icon directory"

[node name="icon_choose" type="TextureButton" parent="setup_mode/icon_directory"]
layout_mode = 0
offset_top = 8.0
offset_right = 448.0
offset_bottom = 56.0

[node name="tags" type="Label" parent="setup_mode"]
use_parent_material = true
offset_left = 24.0
offset_top = 504.0
offset_right = 459.0
offset_bottom = 567.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 50
text = "> Choose tags"

[node name="tags_button" type="TextureButton" parent="setup_mode/tags"]
layout_mode = 0
offset_top = 8.0
offset_right = 384.0
offset_bottom = 56.0

[node name="back" type="Label" parent="setup_mode"]
use_parent_material = true
offset_left = 24.0
offset_top = 568.0
offset_right = 459.0
offset_bottom = 631.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 50
text = "> Back"

[node name="back_button" type="TextureButton" parent="setup_mode/back"]
layout_mode = 0
offset_top = 8.0
offset_right = 184.0
offset_bottom = 72.0

[node name="upload" type="Label" parent="setup_mode"]
use_parent_material = true
offset_left = 1008.0
offset_top = 576.0
offset_right = 1216.0
offset_bottom = 639.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 50
text = "Upload!"

[node name="upload_mod_button" type="TextureButton" parent="setup_mode/upload"]
layout_mode = 0
offset_top = 8.0
offset_right = 208.0
offset_bottom = 64.0

[node name="mode_preview" type="Node2D" parent="."]
material = SubResource("CanvasItemMaterial_sg6m2")

[node name="Sprite2D" type="Sprite2D" parent="mode_preview"]
use_parent_material = true
position = Vector2(1088, 216)
texture = ExtResource("5_mppla")

[node name="mod_name" type="Label" parent="mode_preview"]
use_parent_material = true
offset_left = 584.0
offset_top = 16.0
offset_right = 1232.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 25
text = "Mod name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="mod_tags" type="Label" parent="mode_preview"]
use_parent_material = true
offset_left = 960.0
offset_top = -96.0
offset_right = 1152.0
offset_bottom = -64.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 25
text = "Mod tags"
horizontal_alignment = 1
vertical_alignment = 1

[node name="mod_description" type="Label" parent="mode_preview"]
use_parent_material = true
offset_left = 624.0
offset_top = 88.0
offset_right = 936.0
offset_bottom = 640.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "Your description"
autowrap_mode = 3

[node name="enter_something" type="Node2D" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_qrl76")

[node name="blur" type="ColorRect" parent="enter_something"]
material = SubResource("CanvasItemMaterial_wys5u")
offset_top = 8.0
offset_right = 1280.0
offset_bottom = 728.0
color = Color(0, 0, 0, 0.8)

[node name="enter_name_table" type="Node2D" parent="enter_something"]
visible = false
use_parent_material = true

[node name="enter_name" type="LineEdit" parent="enter_something/enter_name_table"]
use_parent_material = true
offset_left = 256.0
offset_top = 320.0
offset_right = 1024.0
offset_bottom = 400.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 35
placeholder_text = "Enter mod name"
alignment = 1
max_length = 50

[node name="confirm" type="Label" parent="enter_something/enter_name_table"]
use_parent_material = true
offset_left = 320.0
offset_top = 408.0
offset_right = 512.0
offset_bottom = 447.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 30
text = "Confirm"
horizontal_alignment = 1
vertical_alignment = 1

[node name="confirm_name_button" type="TextureButton" parent="enter_something/enter_name_table/confirm"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 40.0

[node name="cancel" type="Label" parent="enter_something/enter_name_table"]
use_parent_material = true
offset_left = 768.0
offset_top = 408.0
offset_right = 960.0
offset_bottom = 447.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 30
text = "Cancel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="cancel_name_button" type="TextureButton" parent="enter_something/enter_name_table/cancel"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 40.0

[node name="enter_description_table" type="Node2D" parent="enter_something"]
visible = false
use_parent_material = true

[node name="description_table" type="TextEdit" parent="enter_something/enter_description_table"]
use_parent_material = true
offset_left = 192.0
offset_top = 128.0
offset_right = 1088.0
offset_bottom = 512.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 25
placeholder_text = "Enter mod description"
wrap_mode = 1

[node name="confirm" type="Label" parent="enter_something/enter_description_table"]
use_parent_material = true
offset_left = 256.0
offset_top = 520.0
offset_right = 448.0
offset_bottom = 559.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 30
text = "Confirm"
horizontal_alignment = 1
vertical_alignment = 1

[node name="confirm_description_button" type="TextureButton" parent="enter_something/enter_description_table/confirm"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 40.0

[node name="cancel" type="Label" parent="enter_something/enter_description_table"]
use_parent_material = true
offset_left = 832.0
offset_top = 520.0
offset_right = 1024.0
offset_bottom = 559.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 30
text = "Cancel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="cancel_description_button" type="TextureButton" parent="enter_something/enter_description_table/cancel"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 40.0

[node name="enter_tags" type="Node2D" parent="enter_something"]
use_parent_material = true

[node name="tags" type="Label" parent="enter_something/enter_tags"]
use_parent_material = true
offset_left = 472.0
offset_top = 112.0
offset_right = 804.0
offset_bottom = 175.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 50
text = "Choose tags"

[node name="weapons" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = -280.0
offset_top = 128.0
offset_right = -147.0
offset_bottom = 154.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "weapons"
horizontal_alignment = 1
vertical_alignment = 1

[node name="weapons_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/weapons"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0

[node name="armor" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = -280.0
offset_top = 192.0
offset_right = -147.0
offset_bottom = 218.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "armor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="armor_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/armor"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0

[node name="characters" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = -280.0
offset_top = 256.0
offset_right = -147.0
offset_bottom = 282.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "characters"
horizontal_alignment = 1
vertical_alignment = 1

[node name="characters_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/characters"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0

[node name="origins" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = -280.0
offset_top = 320.0
offset_right = -147.0
offset_bottom = 346.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "origins"
horizontal_alignment = 1
vertical_alignment = 1

[node name="origins_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/origins"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0

[node name="enemies" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = -280.0
offset_top = 384.0
offset_right = -147.0
offset_bottom = 410.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "enemies"
horizontal_alignment = 1
vertical_alignment = 1

[node name="enemies_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/enemies"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0

[node name="story" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = -24.0
offset_top = 128.0
offset_right = 109.0
offset_bottom = 154.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "story"
horizontal_alignment = 1
vertical_alignment = 1

[node name="story_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/story"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0

[node name="arena" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = -24.0
offset_top = 192.0
offset_right = 109.0
offset_bottom = 218.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "arena"
horizontal_alignment = 1
vertical_alignment = 1

[node name="arena_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/arena"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0

[node name="playground" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = -24.0
offset_top = 256.0
offset_right = 109.0
offset_bottom = 282.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "playground"
horizontal_alignment = 1
vertical_alignment = 1

[node name="playground_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/playground"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0

[node name="gameplay" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = -24.0
offset_top = 320.0
offset_right = 109.0
offset_bottom = 346.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "gameplay"
horizontal_alignment = 1
vertical_alignment = 1

[node name="gameplay_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/gameplay"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0

[node name="sound" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = -24.0
offset_top = 384.0
offset_right = 109.0
offset_bottom = 410.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "sound"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sound_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/sound"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0

[node name="music" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = 232.0
offset_top = 128.0
offset_right = 365.0
offset_bottom = 154.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="music_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/music"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0

[node name="scripts" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = 232.0
offset_top = 192.0
offset_right = 365.0
offset_bottom = 218.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "scripts"
horizontal_alignment = 1
vertical_alignment = 1

[node name="scripts_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/scripts"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0

[node name="other" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = 232.0
offset_top = 256.0
offset_right = 365.0
offset_bottom = 282.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "other"
horizontal_alignment = 1
vertical_alignment = 1

[node name="other_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/other"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0

[node name="replacement" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = 232.0
offset_top = 320.0
offset_right = 372.0
offset_bottom = 346.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "replacement"
horizontal_alignment = 1
vertical_alignment = 1

[node name="replacement_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/replacement"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0

[node name="overhaul" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = 232.0
offset_top = 384.0
offset_right = 365.0
offset_bottom = 410.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "overhaul
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="overhaul_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/overhaul"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0

[node name="QOL" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = 488.0
offset_top = 128.0
offset_right = 621.0
offset_bottom = 154.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "QOL
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="qol_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/QOL"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0

[node name="balance" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = 488.0
offset_top = 192.0
offset_right = 621.0
offset_bottom = 218.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "balance
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="balance_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/balance"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0

[node name="silly" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = 488.0
offset_top = 256.0
offset_right = 621.0
offset_bottom = 282.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "silly
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="silly_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/silly"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0

[node name="vanilla-friendly" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = 448.0
offset_top = 320.0
offset_right = 655.0
offset_bottom = 346.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "vanilla-friendly
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="vanilla_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/vanilla-friendly"]
layout_mode = 0
offset_left = 16.0
offset_right = 192.0
offset_bottom = 32.0

[node name="custom-stage" type="Label" parent="enter_something/enter_tags/tags"]
use_parent_material = true
layout_mode = 0
offset_left = 448.0
offset_top = 384.0
offset_right = 655.0
offset_bottom = 410.0
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 20
text = "custom-stage
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="custom_tag_button" type="TextureButton" parent="enter_something/enter_tags/tags/custom-stage"]
layout_mode = 0
offset_left = 24.0
offset_right = 184.0
offset_bottom = 32.0

[node name="confirm" type="Label" parent="enter_something/enter_tags"]
use_parent_material = true
offset_left = 192.0
offset_top = 576.0
offset_right = 1088.0
offset_bottom = 615.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_8fs5r")
theme_override_font_sizes/font_size = 30
text = "Confirm"
horizontal_alignment = 1
vertical_alignment = 1

[node name="confirm_tags_button" type="TextureButton" parent="enter_something/enter_tags/confirm"]
layout_mode = 0
offset_left = 376.0
offset_right = 520.0
offset_bottom = 40.0

[node name="credits" type="Label" parent="."]
material = SubResource("CanvasItemMaterial_4po2w")
offset_left = 8.0
offset_top = 696.0
offset_right = 290.0
offset_bottom = 719.0
theme_override_fonts/font = ExtResource("2_8fs5r")
text = "Created by Soup-o-Stat ver 0.0.1"

[node name="ver" type="Label" parent="."]
material = SubResource("CanvasItemMaterial_4po2w")
offset_left = 992.0
offset_top = 696.0
offset_right = 1274.0
offset_bottom = 719.0
theme_override_fonts/font = ExtResource("2_8fs5r")
text = " ver 0.0.1"
horizontal_alignment = 2

[connection signal="pressed" from="upload_update/upload_mod/upload_mod_button" to="." method="_on_upload_mod_button_pressed"]
[connection signal="pressed" from="setup_mode/mod_name/name_button" to="." method="_on_name_button_pressed"]
[connection signal="pressed" from="setup_mode/mod_description/description_button" to="." method="_on_description_button_pressed"]
[connection signal="pressed" from="setup_mode/mod_directory/mod_directory_folder" to="." method="_on_mod_directory_folder_pressed"]
[connection signal="pressed" from="setup_mode/icon_directory/icon_choose" to="." method="_on_icon_choose_pressed"]
[connection signal="pressed" from="setup_mode/tags/tags_button" to="." method="_on_tags_button_pressed"]
[connection signal="pressed" from="setup_mode/back/back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="setup_mode/upload/upload_mod_button" to="." method="_on_upload_mod_to_workshop_button_pressed"]
[connection signal="pressed" from="enter_something/enter_name_table/confirm/confirm_name_button" to="." method="_on_confirm_name_button_pressed"]
[connection signal="pressed" from="enter_something/enter_name_table/cancel/cancel_name_button" to="." method="_on_cancel_name_button_pressed"]
[connection signal="pressed" from="enter_something/enter_description_table/confirm/confirm_description_button" to="." method="_on_confirm_description_button_pressed"]
[connection signal="pressed" from="enter_something/enter_description_table/cancel/cancel_description_button" to="." method="_on_cancel_description_button_pressed"]
[connection signal="pressed" from="enter_something/enter_tags/tags/weapons/weapons_tag_button" to="." method="_on_weapons_tag_button_pressed"]
[connection signal="pressed" from="enter_something/enter_tags/tags/armor/armor_tag_button" to="." method="_on_armor_tag_button_pressed"]
[connection signal="pressed" from="enter_something/enter_tags/tags/characters/characters_tag_button" to="." method="_on_characters_tag_button_pressed"]
[connection signal="pressed" from="enter_something/enter_tags/tags/origins/origins_tag_button" to="." method="_on_origins_tag_button_pressed"]
[connection signal="pressed" from="enter_something/enter_tags/tags/enemies/enemies_tag_button" to="." method="_on_enemies_tag_button_pressed"]
[connection signal="pressed" from="enter_something/enter_tags/tags/story/story_tag_button" to="." method="_on_story_tag_button_pressed"]
[connection signal="pressed" from="enter_something/enter_tags/tags/arena/arena_tag_button" to="." method="_on_arena_tag_button_pressed"]
[connection signal="pressed" from="enter_something/enter_tags/tags/playground/playground_tag_button" to="." method="_on_playground_tag_button_pressed"]
[connection signal="pressed" from="enter_something/enter_tags/tags/gameplay/gameplay_tag_button" to="." method="_on_gameplay_tag_button_pressed"]
[connection signal="pressed" from="enter_something/enter_tags/tags/sound/sound_tag_button" to="." method="_on_sound_tag_button_pressed"]
[connection signal="pressed" from="enter_something/enter_tags/tags/music/music_tag_button" to="." method="_on_music_tag_button_pressed"]
[connection signal="pressed" from="enter_something/enter_tags/confirm/confirm_tags_button" to="." method="_on_confirm_tags_button_pressed"]
